fixed services being too large in mobile

--- a/css/services.css
+++ b/css/services.css
@@ -7,7 +7,7 @@
 
 .services-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 .service-item {
